--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 ######################## default configuration ####################
 baseURL = "https://duongptryu.github.io/"
 languageCode = "en-us"
-title = "Liva | Personal blog template"
+title = "Duongptryu | Personal blog and Profolio"
 theme = "liva-hugo"
 summaryLength = "10"
 paginate = 6
@@ -87,13 +87,13 @@ logo = "images/logo.png"
 home = "Home"
 # Meta data
 description = "This is meta description"
-author = "Themefisher"
+author = "Phan Tung Duong"
 # Google Analitycs
 googleAnalitycsID = "Your ID"
 # Contact Information
-mobile = "0124857985320"
-email = "demo@email.com"
-location = "Dhaka, Bangladedsh"
+mobile = "0969360xxx"
+email = "duongptryu@gmail.com"
+location = "Hanoi, Vietnam"
 # copyright
 copyright = "| copyright &copy; 2021 [Themefisher](https://themefisher.com/hugo-themes/) All Rights Reserved |"
 
@@ -107,10 +107,10 @@ preloader = "" # use .png , .svg or .gif format
 enable = true
 
 ############################ news letter ########################
-[params.newsletter]
-enable = true
-title = "Join Our Newsletter"
-content = "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero"
+# [params.newsletter]
+# enable = true
+# title = "Join Our Newsletter"
+# content = "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero"
 
 
 # cookies
@@ -123,7 +123,7 @@ expire_days = 2
 [[params.social]]
 title = "facebook"
 icon = "ti-facebook" # themify icon : https://themify.me/themify-icons
-link = "#"
+link = "https://www.facebook.com/Ryu2532/"
 
 [[params.social]]
 title = "twitter"
@@ -138,9 +138,9 @@ link = "#"
 [[params.social]]
 title = "github"
 icon = "ti-github" # themify icon : https://themify.me/themify-icons
-link = "#"
+link = "https://github.com/duongptryu"
 
 [[params.social]]
 title = "linkedin"
 icon = "ti-linkedin" # themify icon : https://themify.me/themify-icons
-link = "#"
+link = "https://www.linkedin.com/in/duongptryu/"
