--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -19,10 +19,7 @@ jobs:
         uses: peaceiris/actions-hugo@v2
         with:
           hugo-version: 'latest'
-          # extended: true
-      
-      - name: install hugo
-        run: snap install hugo --channel=extended
+          extended: true
 
       - name: Build
         run: hugo --minify
